--- a/bookStoreApp/theme.css
+++ b/bookStoreApp/theme.css
@@ -20,34 +20,51 @@
     margin: auto;
     padding: 0;
     border: 1px solid #888;
-    width: 80%;
+    width: 60%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 
 }
 
 
-/* The Close Button */
-.close {
-    color: white;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
 .modal-header {
-    padding: 2px 2px;
+    padding: 1px 1px;
     background-color: #5cb85c;
     color: white;
 }
 
 .modal-body {padding: 2px 16px;}
+
+table, td, th {
+    border: 1px solid #ddd;
+    text-align: left;
+    
+}
+
+table {
+    border-collapse: collapse;
+    width: 70%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+
+th, td {
+    padding: 5px;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2}
+
+th {
+    background-color: #008000;
+    color: white;
+}
+
+
+form p label {
+    display:block;
+    float:left;
+    width:100px;
+}
+
 
 
 }
