--- a/bookStoreApp/theme.css
+++ b/bookStoreApp/theme.css
@@ -37,28 +37,31 @@ body {font-family: "Arial", sans-serif;}
 
 .modal-body {padding: 2px 16px;}
 
-table, td, th {
-    border: 1px solid #ddd;
-    text-align: left;
-        
-}
 
-table {
+
+table.bookListTable {
     border-collapse: collapse;
-    width: 70%;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
+    border: 1px solid #ddd;
+    text-align: left;  
 }
 
-th, td {
-    padding: 5px;
+.bookListTable td {
+    border: 1px solid #ddd;
+    text-align: left; 
+    padding: 5px;       
 }
 
-tr:nth-child(even) {background-color: #f2f2f2}
+.bookListTable tr:nth-child(even) {background-color: #f2f2f2}
 
-th {
+.bookListTable th {
     background-color: #008000;
     color: white;
+    border: 1px solid #ddd;
+    text-align: left; 
+    padding: 5px;  
 }
 
 
