inline editing of instock

--- a/bookStoreApp/html/theme.css
+++ b/bookStoreApp/html/theme.css
@@ -43,7 +43,7 @@ table.bookListTable {
     border-collapse: collapse;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     border: 1px solid #ddd;
     text-align: left;  
 }
@@ -51,7 +51,7 @@ table.bookListTable {
 .bookListTable td {
     border: 1px solid #ddd;
     text-align: left; 
-    padding: 5px;       
+    padding: 2px;       
 }
 
 .bookListTable tr:nth-child(even) {background-color: #f2f2f2}
@@ -90,10 +90,10 @@ ul.tab li a {
     display: inline-block;
     color: black;
     text-align: center;
-    padding: 14px 16px;
+    padding: 12px 14px;
     text-decoration: none;
     transition: 0.3s;
-    font-size: 17px;
+    font-size: 14px;
 }
 
 /* Change background color of links on hover */
@@ -108,4 +108,29 @@ ul.tab li a:focus, .active {background-color: #ccc;}
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+}
+
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
